Remove usage of GraalVM