@@ -51,10 +51,6 @@
          <artifactId>esmf-aspect-model-github-resolver</artifactId>
       </dependency>
       <dependency>
-         <groupId>org.eclipse.esmf</groupId>
-         <artifactId>esmf-native-support</artifactId>
-      </dependency>
-      <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
       </dependency>
@@ -107,6 +103,10 @@
          <artifactId>js-scriptengine</artifactId>
          <type>jar</type>
          <version>${graalvm-version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.jspecify</groupId>
+         <artifactId>jspecify</artifactId>
       </dependency>
 
       <!-- Test dependencies -->
@@ -275,13 +275,6 @@
                               <exclude>org/apache/batik/apps/rasterizer/resources/rasterizer.policy</exclude>
                            </excludes>
                         </filter>
-                        <!-- These configs add lots of spurious GraalVM configuration -->
-                        <filter>
-                           <artifact>org.jboss.forge.roaster:roaster-jdt</artifact>
-                           <excludes>
-                              <exclude>META-INF/native-image/**</exclude>
-                           </excludes>
-                        </filter>
                         <!-- Required to have Model Instantiators available -->
                         <filter>
                            <artifact>org.eclipse.esmf:esmf-aspect-meta-model-java</artifact>
@@ -344,37 +337,6 @@
             </configuration>
          </plugin>
 
-         <!-- Configure maven failsave plugin (execution of integration tests) -->
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-failsafe-plugin</artifactId>
-            <version>${maven-failsafe-plugin-version}</version>
-            <executions>
-               <execution>
-                  <goals>
-                     <goal>integration-test</goal>
-                     <goal>verify</goal>
-                  </goals>
-               </execution>
-            </executions>
-            <configuration>
-               <skipITs>${skip.maven.failsafe}</skipITs>
-               <systemPropertyVariables>
-                  <packaging-type>${packaging-type}</packaging-type>
-                  <executableJar>${project.build.directory}/${project.artifactId}-${project.version}.jar
-                  </executableJar>
-                  <binary>${project.build.directory}/${binary-name}</binary>
-                  <nativeConfigPath>${native-config-path}</nativeConfigPath>
-                  <forkCount>1</forkCount>
-                  <reuseForks>true</reuseForks>
-                  <argLine>-Xmx4096m</argLine>
-               </systemPropertyVariables>
-               <includes>
-                  <include>**/SammCliIntegrationTest.java</include>
-               </includes>
-            </configuration>
-         </plugin>
-
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
@@ -410,38 +372,6 @@
    </build>
 
    <profiles>
-      <profile>
-         <id>copy-font-configuration</id>
-         <activation>
-            <os>
-               <family>windows</family>
-            </os>
-         </activation>
-         <build>
-            <plugins>
-               <!-- Copy font configuration files from the GraalVM directory (pointed to by JAVA_HOME in native builds) to the output directory -->
-               <plugin>
-                  <groupId>org.codehaus.mojo</groupId>
-                  <artifactId>wagon-maven-plugin</artifactId>
-                  <version>${wagon-maven-plugin-version}</version>
-                  <executions>
-                     <execution>
-                        <id>copy-fontconfig-bfc</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                           <goal>download-single</goal>
-                        </goals>
-                        <configuration>
-                           <url>file://${env.JAVA_HOME}/lib</url>
-                           <fromFile>fontconfig.bfc</fromFile>
-                           <toFile>${project.build.outputDirectory}/fontconfig.bfc</toFile>
-                        </configuration>
-                     </execution>
-                  </executions>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
 
       <!--
       This profile is active by default and will disable the generation of the source jar.
@@ -459,73 +389,5 @@
          </properties>
       </profile>
 
-      <profile>
-         <id>native</id>
-         <properties>
-            <packaging-type>native</packaging-type>
-            <skip.maven.surefire>true</skip.maven.surefire>
-            <skip.maven.failsafe>false</skip.maven.failsafe>
-            <skip.maven.shade>true</skip.maven.shade>
-            <maven.source.skip>false</maven.source.skip>
-         </properties>
-
-         <build>
-            <plugins>
-               <!-- When building native, skip build the jar -->
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-jar-plugin</artifactId>
-                  <executions>
-                     <execution>
-                        <id>default-jar</id>
-                        <phase>none</phase>
-                     </execution>
-                  </executions>
-               </plugin>
-
-               <plugin>
-                  <groupId>org.graalvm.buildtools</groupId>
-                  <artifactId>native-maven-plugin</artifactId>
-                  <extensions>true</extensions>
-                  <executions>
-                     <execution>
-                        <id>build-native</id>
-                        <goals>
-                           <goal>compile</goal>
-                        </goals>
-                        <phase>prepare-package</phase>
-                     </execution>
-                  </executions>
-                  <configuration>
-                     <mainClass>${main-class}</mainClass>
-                     <imageName>./${binary-name}</imageName>
-                     <buildArgs>
-                        <arg>--verbose</arg>
-                        <arg>-march=compatibility</arg>
-                        <arg>-H:EnableURLProtocols=http,https</arg>
-                        <arg>--enable-https</arg>
-                        <arg>--no-fallback</arg>
-                        <arg>--report-unsupported-elements-at-runtime</arg>
-                        <arg>--features=org.eclipse.esmf.nativefeatures.SammCliFeature</arg>
-                        <arg>-H:-DeadlockWatchdogExitOnTimeout</arg>
-                        <arg>-H:DeadlockWatchdogInterval=0</arg>
-                        <arg>-H:+AddAllCharsets</arg>
-                        <arg>-H:+ReportExceptionStackTraces</arg>
-                        <arg>-H:+PrintClassInitialization</arg>
-                        <arg>-J-XX:MaxRAMPercentage=90.0</arg>
-                        <arg>-J-XX:GCTimeRatio=19</arg>
-                        <arg>-J--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=org.graalvm.nativeimage/org.graalvm.nativeimage.impl=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.configure=ALL-UNNAMED</arg>
-                        <arg>-J--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jni=ALL-UNNAMED</arg>
-                        <arg>--initialize-at-build-time=org.eclipse.esmf.nativefeatures.Native</arg>
-                     </buildArgs>
-                     <quickBuild>true</quickBuild>
-                  </configuration>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
    </profiles>
 </project>
